feat(mangalist):First release

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <script type="module" src="./openDB.js"></script>
     <meta charset="utf-8">
